--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ JWT_SECRET=super-secret-JWT-token237639
 
 # DATABASE_URL=postgres://trackITadmin:trackIT2022@trackit.cxgpn3wfs40q.eu-west-2.rds.amazonaws.com:5432/trackIT
 
-DATABASE_URL=postgresql://postgres:E70lJt20JPXSfLNVG5op@containers-us-west-113.railway.app:6433/railway
+# DATABASE_URL=postgresql://postgres:E70lJt20JPXSfLNVG5op@containers-us-west-113.railway.app:6433/railway
+
+DATABASE_URL=postgresql://postgres:cW8oHer2mp8o5hIx@db.uhpxhjnvucdneswskxpr.supabase.co:5432/postgres
